[package]
name = "polkadot-rpc"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "18.0.0"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-keystore = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-api = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-consensus-babe = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-chain-spec = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-rpc = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-consensus-babe = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-consensus-babe-rpc = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-consensus-epochs = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-finality-grandpa = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-finality-grandpa-rpc = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-sync-state-rpc = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
pallet-mmr-rpc = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
pallet-transaction-payment-rpc = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-block-builder = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
beefy-gadget = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
beefy-gadget-rpc = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
