[package]
name = "polkadot-rpc"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "18.0.0"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-keystore = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-consensus-babe = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-chain-spec = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-rpc = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-consensus-babe = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-consensus-babe-rpc = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-consensus-epochs = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-finality-grandpa = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-finality-grandpa-rpc = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-sync-state-rpc = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
pallet-mmr-rpc = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
pallet-transaction-payment-rpc = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-block-builder = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
beefy-gadget = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
beefy-gadget-rpc = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
