[package]
name = "polkadot-statement-table"
version = "0.9.19"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3.1.2", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.19-gorka-xcm-v3" }
primitives = { package = "polkadot-primitives", path = "../primitives" }
