[package]
name = "polkadot-validation"
version = "0.8.23"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
polkadot-primitives = { path = "../primitives" }
parachain = { package = "polkadot-parachain", path = "../parachain" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "libp2p-0.28" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "libp2p-0.28" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "libp2p-0.28" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "libp2p-0.28" }
consensus = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "libp2p-0.28" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", branch = "libp2p-0.28" }
futures = "0.3.4"
log = "0.4.8"
derive_more = "0.14.1"
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "libp2p-0.28" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "libp2p-0.28" }
primitives = { package = "sp-core", git = "https://github.com/paritytech/substrate", branch = "libp2p-0.28" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "libp2p-0.28" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "libp2p-0.28" }
block-builder = { package = "sc-block-builder", git = "https://github.com/paritytech/substrate", branch = "libp2p-0.28" }
trie = { package = "sp-trie", git = "https://github.com/paritytech/substrate", branch = "libp2p-0.28" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "libp2p-0.28" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "libp2p-0.28" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "libp2p-0.28" }
