[package]
name = "polkadot-client"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
frame-benchmarking = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
frame-system-rpc-runtime-api = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }

sp-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-storage = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-api = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-session = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-authority-discovery = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-finality-grandpa = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-consensus-babe = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-transaction-pool = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-block-builder = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }

sc-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-executor = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-service = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-sig-para" }

pallet-mmr-primitives = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }

beefy-primitives = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }

# Polkadot Runtimes
polkadot-runtime = { path = "../../runtime/polkadot", optional = true }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
westend-runtime = { path = "../../runtime/westend", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

polkadot-primitives = { path = "../../primitives" }

[features]
default = ["polkadot"]
polkadot = ["polkadot-runtime"]
kusama = ["kusama-runtime"]
rococo = ["rococo-runtime"]
westend = ["westend-runtime"]
