[package]
name = "polkadot-client"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
frame-benchmarking = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
frame-system-rpc-runtime-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }

sp-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-storage = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-session = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-authority-discovery = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-finality-grandpa = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-consensus-babe = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-transaction-pool = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-block-builder = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }

sc-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-executor = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-service = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }

pallet-mmr-primitives = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }

beefy-primitives = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }

# Polkadot Runtimes
polkadot-runtime = { path = "../../runtime/polkadot", optional = true }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
westend-runtime = { path = "../../runtime/westend", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

polkadot-primitives = { path = "../../primitives" }

[features]
default = ["polkadot"]
polkadot = ["polkadot-runtime"]
kusama = ["kusama-runtime"]
rococo = ["rococo-runtime"]
westend = ["westend-runtime"]
