[package]
name = "polkadot-runtime-metrics"
version = "0.9.19"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
sp-std = { package = "sp-std", git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.19-gorka-xcm-v3" }
sp-tracing = { git = "https://github.com/purestake/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.19-gorka-xcm-v3" }
parity-scale-codec = { version = "3.1.2", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }

bs58 = { version = "0.4.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-tracing/std",
    "parity-scale-codec/std",
    "primitives/std",
    "bs58/std"
]
runtime-metrics = ["sp-tracing/with-tracing"]
